<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_more_menu"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/more_menu"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/btn_setting"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/setting"
                app:showAsAction="never" />
            <item
                android:id="@+id/btn_logout"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/logout"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>