<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profil.ProfilFragment">

    <LinearLayout
        android:id="@+id/field_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:alpha="1"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_profil"
            android:textSize="28sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_extrabold"
            android:textColor="@color/darkred"
            android:layout_marginStart="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/field_name"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:alpha="1"
        android:background="@drawable/bg_auten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_text" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_drive_file_rename_outline_24"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/profil_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/name"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/darkred"
            android:ems="10"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/field_gender"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:alpha="1"
        android:background="@drawable/bg_auten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_name"  >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_animation_24"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/profil_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/gender"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/darkred"
            android:ems="10"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/field_domisili"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:alpha="1"
        android:background="@drawable/bg_auten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_gender"  >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_map_24"
            android:inputType="textShortMessage" />

        <TextView
            android:id="@+id/profil_domisili"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/region"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/darkred"
            android:ems="10"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/field_age"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:alpha="1"
        android:background="@drawable/bg_auten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_domisili" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_date_range_24"
            android:inputType="textShortMessage" />

        <TextView
            android:id="@+id/profil_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/age"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/darkred"
            android:ems="10"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/field_work"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:alpha="1"
        android:background="@drawable/bg_auten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_age" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_work_24"
            android:inputType="textShortMessage" />

        <TextView
            android:id="@+id/profil_work"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/work"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/darkred"
            android:ems="10"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/field_button"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        android:alpha="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_work" >

        <com.damar.meaty.customview.MyButton
            android:id="@+id/btn_edit"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:alpha="1"
            android:text="@string/edit"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>